# opencv-facial-recognition

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: basic_live_face_recognition.py  face_recognition_haarcascade_basic.py  face_recognition_haarcascade_blink_advanced.py  face_recognition_haarcascade_ear.py  face_recognition_mtcnn.py
src/models/: last_model_generated.pkl  last_model_generated_mtcnn.pkl
