[tool.poetry]
name = "opencv-facial-recognition"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
opencv-python = "^4.10.0.84"
deepface = "^0.0.92"
tensorflow = "^2.17.0"
scikit-learn = "^1.5.1"
dlib = "^19.24.4"




[tool.poetry.group.dev.dependencies]
pip = "^24.1.2"
setuptools = "^70.3.0"
wheel = "^0.43.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
